Added day 3 solutions